# zero2prod

./: .travis.yml  Cargo.toml  Dockerfile  README.md  build_rs_cov.profraw  cobertura.xml  docker-compose.yml  spec.yaml
.cargo/: config.toml
.github/workflows/: general.yml  rust.yml
.sqlx/: query-20072e88a6bbc82e8fe208fe9c390b271506b87e43daa85a29b68d79d877123b.json  query-60e2d39a5f5c4b396dfbb64e8ec58e423b5fbfae8d8e06898ffe9b5557e734e7.json  query-bb7b963299a7fb8f6fc3820f7fad5d8c609757dfcf55343d0f497b1b731fce0d.json
configuration/: base.yaml  production.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: mod.rs  new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: db_health_check.rs  greeting.rs  health_check.rs  hello_world.rs  mod.rs  name.rs  subscriptions.rs
tests/: db_health_check_test.rs  email_client_tests.rs  greeting.rs  greeting_test.rs  health_check.rs  health_check_test.rs  hello_world.rs  hello_world_test.rs  integration_test.rs  name_test.rs
tests/api/: health_check_test.rs  helpers.rs  main.rs  subscriptions_test.rs
tests/common/: mod.rs
