#! Cargo.toml
[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
# We could use any path here, but we are following the community convention
# We could specify a library name using the `name` field. If unspecified,
# cargo will default to `package.name`, which is what we want.
path = "src/lib.rs"

# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.5.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"]}
serde = "1.0.115"
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
serde-aux = "4"
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.1"
tracing-log = "0.2"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }
unicode-segmentation = "1.12.0"
validator = "0.18"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

[dev-dependencies]
quickcheck = "1.0.3"
quickcheck_macros = "1"
claims = "0.7"
fake = "2.9"
rand = "0.8"


